last fix for boardnames, if theyre to long it doesnt wrap

--- a/src/Components/CategoryList/CategoryList.css
+++ b/src/Components/CategoryList/CategoryList.css
@@ -4,3 +4,7 @@
   flex-wrap: nowrap;
   overflow-x: auto;
 }
+
+h2 {
+    padding:20px;
+}
